@@ -1,3 +1,9 @@
+2010-02-16  Abel Cheung  <abelcheung@gmail.com>
+
+	* notation/lilypond.php:
+	- Precisely determine the version that corresponds to the safe mode
+	  option change.
+
 2010-02-12  Abel Cheung  <abelcheung@gmail.com>
 
 	* notation/lilypond.php:
